[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Old Englished Boots/button.tres" type="DynamicFont" id=2]
[ext_resource path="res://Images/Objects/Wand/wand_animation.tres" type="SpriteFrames" id=3]

[node name="TextureButton" type="TextureButton"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Exit")
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "Test Text"

[node name="RichTextLabel" type="Label" parent="."]
margin_right = 72.0
margin_bottom = 14.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Button text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_arrow" type="AnimatedSprite" parent="."]
position = Vector2( -30, 15 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 3 )

[node name="right_arrow" type="AnimatedSprite" parent="."]
position = Vector2( 200, 15 )
rotation = 4.71239
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 3 )
